# sir

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  feedback.py  improver.py  main.py  pyproject.toml  requirements.txt  retriever.py  test_benchmarks.py
.claude/commands/: ship.md
.claude/skills/ship/: SKILL.md
docs/: MANIFEST.md  README.md  RELEASE_LOG.md  benchmarks.md  cli.md  design_uncertainty_SIR  design_uncertainty_SIR.MD  design_v0_54.md  design_v0_57.md  experiments-grid.md  roadmap.md
docs/concepts/: architecture.md  controller-estimator-scheduler.md  controller-trace.md
docs/design/: design_v0_55.md  design_v0_56.md
docs/meetings/: 2026-05-13.md  README.md
docs/onboarding/: dataset_integration.md
docs/presentations/: ragtune-feedback-driven-retrieval-group-talk.html  ragtune-feedback-driven-retrieval-group-talk.md
docs/superpowers/plans/: 2026-05-01-ragtune-svg-figures.md
docs/superpowers/specs/: 2026-05-01-ragtune-svg-figures-design.md
examples/: demo_active_learning.py  demo_bright_retrieval.py  demo_job_postings.py  demo_langchain_retriever.py  demo_pyterrier_bright.py  demo_pyterrier_budgets.py  demo_pyterrier_ird.py  demo_scheduler.py  demo_trec_covid_comparison.py  onboard_beir_dataset.py  onboard_custom_dataset.py  onboard_qa_dataset.py  quickstart.py  reformir_pipeline.yaml  simple_pipeline.yaml
proposals/: AWS Agentic AI call for proposals — Spring 2026  aws-agentic-ai-cfp-spring-2026-draft.md
research/: research.bib  vision.md  vision.tex
scripts/: benchmark_bright.py  benchmark_coir.py  benchmark_crumb.py  benchmark_freshstack.py  benchmark_obliq.py  benchmark_skillret.py  benchmark_suite.py  benchmark_utils.py  check_docs.py  experiment_grid.py  run_benchmark.py  run_indexing.py  run_tool_retrieval.py  sample_bright.py  summarize_results.py
scripts/evaluation/: eval_dataloader.py
specs/: benchmark-infrastructure-restructuring.md  coir-benchmark.md  freshstack-similarity-estimator-bug.md  specs-v0-1.md  specs-v0-2.md  todo-similarity-estimator-diversity.md
src/ragtune/: __init__.py  registry.py
src/ragtune/adapters/: __init__.py  langchain.py  llamaindex.py  pyterrier.py
src/ragtune/cli/: config_loader.py  main.py  visualize.py  wizard.py
src/ragtune/components/: __init__.py  assemblers.py  estimators.py  feedback.py  fusion.py  reformulators.py  rerankers.py  retrievers.py  schedulers.py
src/ragtune/config/: defaults.yaml  models.py  prompts.yaml
src/ragtune/core/: __init__.py  budget.py  controller.py  errors.py  interfaces.py  pool.py  types.py
src/ragtune/evaluation/: RetrievalEvaluator.py  __init__.py
src/ragtune/indexing/: README.md  __init__.py  base.py  dense_indexer.py  factory.py  flex_indexer.py  pyserini_indexer.py  pyterrier_indexer.py
src/ragtune/utils/: __init__.py  config.py  console.py  tokenizer.py
tests/: cli_test_config.yaml  conftest.py  test_plan.md
tests/benchmarks/: intelligence_gain.py  loop_efficiency.py
tests/integration/: test_async_controller.py  test_controller.py  test_e2e_v0_55.py
tests/integration/adapters/: test_langchain_smoke.py  test_pyterrier_adapter_integration.py
tests/integration/core/: test_controller_0_54.py  test_controller_0_55.py  test_end_to_end_local.py
tests/unit/: test_budget.py  test_estimator.py  test_langchain_adapter.py  test_llamaindex_adapter.py  test_pyterrier_adapter.py  test_similarity.py
tests/unit/cli/: test_visualize.py
(+49 files in other folders)
