[project]
name = "ragtune"
version = "0.1.0"
description = "Budget-aware RAG middleware"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
ragtune = "ragtune.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
