[project]
name = "ragtune"
version = "0.5.0"
authors = [
  { name="RAGtune Team", email="maintainers@ragtune.ai" },
]
description = "Budget-aware, iterative RAG middleware with active learning."
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "litellm>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.1",
    "faiss-cpu>=1.7.4",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ragtune = "ragtune.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
