[project]
name = "ragtune"
version = "0.5.0"
authors = [
  { name="RAGtune Team", email="maintainers@ragtune.ai" },
]
description = "Budget-aware, iterative RAG middleware with active learning."
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "litellm>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.1",
    "faiss-cpu>=1.7.4",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]
test-integration = [
    "ragtune[test]",
    "python-terrier>=0.10.0",
    "ir_datasets>=0.5.0",
]

[project.scripts]
ragtune = "ragtune.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Resolve torch from the CPU-only PyTorch index. This keeps the lock file
# small (~180 MB) and CI-friendly. The lock file pins CPU torch for
# reproducibility on developer machines and CI runners without GPUs.
#
# GPU users: install torch from the CUDA index BEFORE running `uv sync`.
# uv will see torch is already satisfied and skip reinstallation.
#
#   CUDA 12.4:  uv pip install torch --index-url https://download.pytorch.org/whl/cu124
#   CUDA 11.8:  uv pip install torch --index-url https://download.pytorch.org/whl/cu118
#   CPU only:   uv pip install torch --index-url https://download.pytorch.org/whl/cpu
#
# After installing your preferred torch variant, run `uv sync` to install
# the rest of the dependencies from the lock file.

constraint-dependencies = ["yarl<1.24.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.setuptools.packages.find]
where = ["src"]
